增加可左右滑动的控件:SlideLeftableView

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="loading_data">正在加载数据...</string>
     
     <string name="tab_home">主页</string>
-    <string name="tab_post">往期</string>
+    <string name="tab_post">控件</string>
     <string name="tab_bookmark">书签</string>
     <string name="tab_more">更多</string>
     
